k8s/flux/clusters/talos-cluster/infra/storage/synology-csi-talos/synology-dsm-proxy.yaml
apiVersion: v1
kind: Service
metadata:
  name: synology-dsm-proxy
  namespace: synology-csi-talos
spec:
  type: ClusterIP
  clusterIP: None
  ports:
  - protocol: TCP
    port: 5000
    targetPort: 5000
---
apiVersion: v1
kind: Endpoints
metadata:
  name: synology-dsm-proxy
  namespace: synology-csi-talos
subsets:
- addresses:
  - ip: 172.21.0.20
  ports:
  - port: 5000
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: http
  namespace: synology-csi-talos
spec:
  entryPoints: [ "web" ]
  routes:
  - match: Host(`synology.homelab.emerconnelly.com`)
    kind: Rule
    middlewares:
    - name: https-redirect
      namespace: traefik
    services:
    - name: noop@internal
      kind: TraefikService
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: https
  namespace: synology-csi-talos
spec:
  entryPoints: [ "websecure" ]
  routes:
  - match: Host(`synology.homelab.emerconnelly.com`)
    kind: Rule
    services:
    - name: synology-dsm-proxy
      port: 5000
      passHostHeader: true
      serversTransport: skip-ssl-verify
      sticky:
        cookie:
          name: traefik
          secure: true
          httpOnly: true
          sameSite: lax
  tls:
    secretName: ingress-tls
